--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
             integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-        <link rel="icon" type="image/png" href="/Images/favicon.ico"
+        <link alt = "Homepage Favicon" rel="icon" type="image/png" href="./Images/favicon.ico"
             sizes="16x16">
-
     </head>
     <body>
         <header>
@@ -40,7 +38,7 @@
         <main>
             <div class="hero">
                 <div class="hero-cover">
-                    <img src="Images/Cover-Image.jpg">
+                    <img src="Images/Cover-Image.jpg" alt="3D Web.30">
                 </div>
                 <aside>
                     <h2>New</h2>
@@ -84,7 +82,7 @@
                 <div class="featured">
                     <div class="feat-card">
                         <div class="feat-img">
-                            <img src="Images/image-retro-pcs.jpg">
+                            <img src="Images/image-retro-pcs.jpg" alt="Retro Pcs">
                         </div>
                         <div class="feat-desc">
                             <h2>01</h2>
@@ -95,7 +93,7 @@
 
                     <div class="feat-card">
                         <div class="feat-img">
-                            <img src="Images/image-top-laptops.jpg">
+                            <img src="Images/image-top-laptops.jpg" alt="Laptop Image">
                         </div>
                         <div class="feat-desc">
                             <h2>02</h2>
@@ -107,7 +105,7 @@
 
                     <div class="feat-card">
                         <div class="feat-img">
-                            <img src="Images/image-gaming-growth.jpg">
+                            <img src="Images/image-gaming-growth.jpg" alt="Growth In Gaming Stock">
                         </div>
                         <div class="feat-desc">
                             <h2>03</h2>
